--- a/src/pug/includes/_mixins.pug
+++ b/src/pug/includes/_mixins.pug
@@ -105,13 +105,13 @@ mixin document-item(date, title)
 		.document-item__icon
 			+icon('documents')
 
-mixin sertificate(data, title, min_img, i)
-	a(href="#").sertificate-item.js-popup-button.ajax-trigger(data-modal='sertificate', data-href='sertificate-popup.html', data-slideto=''+i).ajax-trigger
+mixin sertificate(date, title, min_img, i)
+	a(href="#").sertificate-item.js-popup-button.ajax-trigger(data-modal='popup-contents', data-href='sertificate-popup.html', data-slideto=''+i).ajax-trigger
 		.sertificate-item__img
 			img(src="img/"+min_img, alt="sertificate")
 		.sertificate-item__info
 			h4.h4.sertificate-item__title= title
-			p.text-small.sertificate-item__date= data
+			p.text-small.sertificate-item__date= date
 
 mixin infrastructure-links-item(links)
 	each link, index in links
@@ -120,19 +120,23 @@ mixin infrastructure-links-item(links)
 		else 
 			a(href="").infrastructure-links__item= link
 
-mixin gallery-block(img, title, count)
-	a(href="#").gallert-block
-		.gallert-block__image
+mixin gallery-album(img, title, count)
+	a(href="#").gallery-album
+		.gallery-album__image
 			img(src="img/"+img, alt="album gallery")
-		.gallert-block__info
-			.gallert-block__title.h3= title
-			.gallert-block__count.text-primary
-				span.gallert-block__total= count
+		.gallery-album__info
+			.gallery-album__title.h3= title
+			.gallery-album__count.text-primary
+				span.gallery-album__total= count
 				span &nbsp;фото
+
+mixin gallery-photo(img, i)
+	a.gallery-photo.js-popup-button.ajax-trigger(href="#", data-modal="popup-contents", data-href='gallery-album-1.html', data-slideto=''+i)
+		img(src="img/"+img, alt="gallery-photo")
 
 mixin paginate
 	.paginate
-		.paginate__arrow.paginate__arrow_prev
+		a(href="#").paginate__arrow.paginate__arrow_prev
 			+icon('arrow-circle')
 		.paginate-button
 			a(href="#").paginate__link 1
@@ -142,5 +146,11 @@ mixin paginate
 			a(href="#").paginate__link 6
 			span.paginate__devider ...
 			a(href="#").paginate__link 12
-		.paginate__arrow.paginate__arrow_next
+		a(href="#").paginate__arrow.paginate__arrow_next.paginate__arrow_disable
 			+icon('arrow-circle')
+
+mixin link-banner(title, link, img)
+	.link-banner(style="background-image:url('img/"+img+"')")
+		.link-banner__title.h3= title
+		a(href="#").link-button.link-button_small= link
+
