pages: 404, map-site, search, partners, project - porcess

--- a/src/pug/documents.pug
+++ b/src/pug/documents.pug
@@ -28,13 +28,13 @@ block content
 			.content-inner
 				.content-inner-group.fade-down
 					h2.h2.content-inner-group__title Правила оферты
-					.content-inner-group__wrap.content-inner-group__wrap_mw
+					.content-inner-group-min-w
 						+document-item('09.06.2017, бессрочно', 'Uptime Institute Tier III Certified: Constructed Facility')
 						+document-item('с 08.06.2015 по 08.06.2017', 'Uptime Institute Tier III Certified: Design')
 						+document-item('с 15.06.2017 по 15.06.2018', 'M&O Approved')
 				.content-inner-group.fade-down
 					h2.h2.content-inner-group__title Инструкции
-					.content-inner-group__wrap.content-inner-group__wrap_mw
+					.content-inner-group-min-w
 						+document-item('09.06.2017, бессрочно', 'Uptime Institute Tier III Certified: Constructed Facility')
 						+document-item('с 08.06.2015 по 08.06.2017', 'Uptime Institute Tier III Certified: Design')
 						+document-item('с 15.06.2017 по 15.06.2018', 'M&O Approved')
