--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -57,6 +57,9 @@
 		align-items: flex-start
 		&__list
 			display: none
+	+r(400)
+		.nav-home-btn
+			display: none
 .nav-home-btn
 	display: inline-block
 	width: 0
