--- a/src/pug/data-center.pug
+++ b/src/pug/data-center.pug
@@ -39,9 +39,9 @@ block content
 										+datacenter-characteristics('6620', 'Площадь зданий и сооружений кв.м.')
 				.data-center-slider__nav
 					button(type="button",class="slick-prev").data-center-slider__prev
-						+icon('arrow')
+						+icon('arrow-light')
 					button(type="button", class="slick-next").data-center-slider__next
-						+icon('arrow')
+						+icon('arrow-light')
 	.box
 		+breadcrumbs(['Главная', 'Дата-центер'])
 	.box
@@ -160,7 +160,7 @@ block content
 							dd.data-parameters__desc.text-small 24/7
 					.content-inner-item__decor
 						<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 58.8 60.2"><path fill="currentcolor" d="M57.8 37.7v10.8H42.1L35.4 32a6.56 6.56 0 0 0 3.6-5.8 1.7 1.7 0 0 0-.1-.7l15.7-4.2a4.17 4.17 0 0 0 3.1-4.1 4.1 4.1 0 0 0-.1-1.1l-3.4-13A4.17 4.17 0 0 0 50.1 0a4.1 4.1 0 0 0-1.1.1L3.2 12.3 5.1 17 0 18.4l3 11.4.5-.1L9.6 28l1.9 4.7.4-.1 14.5-3.9a6.55 6.55 0 0 0 6 4 10 10 0 0 0 1.6-.2.52.52 0 0 0 .4-.2l7 17.1h16.4v10.8h1V37.7zM3.7 28.5L1.2 19l4.2-1 3.8 9.1zm6.9-.7l-.2-.6-5.8-14.3L49.3 1.1a2.2 2.2 0 0 1 .8-.1 3.3 3.3 0 0 1 3.1 2.4l3.4 13a2.49 2.49 0 0 1 .1.8 3.3 3.3 0 0 1-2.4 3.1L12.1 31.6zm23.2 3.8a5.85 5.85 0 0 1-1.3.2 5.65 5.65 0 0 1-5-3.2L38 25.8v.5a5.53 5.53 0 0 1-4.2 5.3z"/><path fill="currentcolor" d="M48.23 7.75l1-.26 1.94 7.35-1 .26zm-4.5 1.11l1-.26 1.92 7.4-1 .26zm-4.39 1.29l1-.26 1.94 7.35-1 .26z"/></svg>
-				.data-center-details.fade-down
+				.bg-gray.data-center-details.fade-down
 					h3.h3 Дата-центры подключены к точкам обмена трафиком MSK-IX, DATA-IX. Точки присутствия на ММТС-9, ММТС-10. Собственная оптоволоконная сеть
 					ul.data-center-details__list
 						li.data-center-details__item.text-primary Все активное оборудование дублируется по принципу N+1
