--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -612,11 +612,9 @@ body
 			width: 15px
 			height: 15px
 
-
-.data-center-details
+.bg-gray
 	background-color: #fcfcfc
 	position: relative
-	max-width: 714px
 	&:after
 		content: ''
 		display: block
@@ -637,6 +635,10 @@ body
 		top: 0
 		left: 100%
 		z-index: -1
+
+.data-center-details
+	position: relative
+	max-width: 714px
 	padding: 70px 0
 	&__list
 		margin-top: 25px
@@ -835,6 +837,14 @@ body
 		&__desc
 			margin-bottom: 50px
 
+.projects-head
+	&__title
+		padding-bottom: 75px
+		margin-bottom: 60px
+		border-bottom: 1px solid #cccccc
+		+r(980)
+			padding-bottom: 40px
+			margin-bottom: 40px
 .projects-body
 	margin-bottom: -50px
 .projects-wpapper
@@ -842,13 +852,24 @@ body
 	justify-content: space-between
 	flex-wrap: wrap
 
-.projects-filters-wrap
+.projects-filters
 	display: flex
 	justify-content: space-between
 	align-items: center
+	margin-bottom: 40px
+	+r(620)
+		flex-wrap: wrap
+	&__form
+		display: flex
+		+r(620)
+			width: 100%
+			margin-top: 20px
+		+r(480)
+			flex-wrap: wrap
+			justify-content: flex-end
+	&__title
+		font-size: 20px
 
-.projects-filters__form
-	display: flex
 
 .dropdown-target
 	position: absolute
@@ -859,189 +880,113 @@ body
 	background-color: #ffffff
 	transition: opacity .3s,visibility .3s
 
-.js-select-custom.active
-	.selects
-		border-color: blue
-		&:after
-			transform: scale(1,-1) rotate(90deg)
-	.dropdown-target
-		transform: translateY(0)
-		opacity: 1
-		visibility: visible
-	.select-carret
-		transform: rotate(90deg)
-
 .select-check
 	display: block
 	vertical-align: top
-	width: 100%
+	width: 165px
+	margin-right: 16px
 	position: relative
+	+r(480)
+		width: 48%
+		margin-right: 2%
+		margin-bottom: 16px
+		&:last-child
+			margin-right: 0
 	&.disabled
 		opacity: .5
 		pointer-events: none
 	&.error
 		.selects
-			border-color: green
+			border-color: #f2db00
 	// прокрутка
 	div::-webkit-scrollbar
-		border-radius: 10px;
-		width: 4px
-		background-color: red
+		width: 9px
+		background-color: #ebebeb
 	div::-webkit-scrollbar-thumb
-		box-shadow: inset 0 0 35px 35px rgba(68, 97, 119, 0.1)
+		box-shadow: inset 0 0 35px 35px #f2db00
 	.dropdown-inner
-		box-shadow: 0px 5px 11px 0px rgba(68, 97, 119, 0.2);
-		+rem(padding-top,20px)
-		+rem(padding-bottom,10px)
+		box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2)
+		border: 1px solid #cccccc
+		margin-top: -1px
 	.dropdown-target
 		left: 0
 		z-index: 3
 	.dropdown-content
 		overflow-y: auto
-		+rem(max-height,200px)
-		+rem(margin-left,-7px)
-
-		.listed
-			b 
-				+rem(font-size,14px)
-				padding-left: 0
-				cursor: auto
-				+rem(margin-top,1px)
-				color: #6d6d6d
+		max-height: 250px
 	.select-carret
+		display: block
+		width: 8px
+		height: 4px
 		position: absolute
-		right: 10px
-		top: 20px
+		right: 20px
+		top: 23px
 		z-index: 2
-		+tr(all .3s ease)
+		+tr(all .5s ease)
+		svg
+			position: absolute
+			top: 0
+			left: 0
 
 .selects
 	width: 100%
 	display: inline-block
 	position: relative
-	+tr(border .3s)
-	+padlr(15px)
+	+tr(all .3s)
+	padding: 15px
 	text-align: left
 	background-color: #ffffff
 	border-width: 1px;
-	border-color: #a6a6a6
+	border-color: #cccccc
 	border-style: solid
-	+rem(font-size,14px)
-	+rem(height,50px)
+	font-size: 14px
+	height: 50px
 	color: #737373
 	&:active
 		color: #737373
 	.btn-text
-		+rem(margin-top,2px)
+		margin-top: 2px
 		display: block
-		+rem(font-size,14px)
+		font-size: 14px
 		white-space: nowrap
 		text-overflow: ellipsis
 		overflow: hidden
 		width: 100%
-		+rem(padding-right,25px)
+		padding-right: 25px
 		&.active
-			color: color(textblk)
+			color: #737373
 .option
 	display: block
 	width: 100%
 	cursor: pointer;
 	position: relative;
-	+rem(padding,5px 0 5px 7px);
-	+rem(font-size,16px)
-	color: color(textgray)
-	font-family: $o
+	padding: 15px 10px 15px 20px
+	font-size: 14px
+	color: #737373
 	line-height: 1.429;
+	background-color: #ffffff
 	margin-bottom: 0 !important
 	white-space: normal !important
+	+tr(background-color .3s)
 	&:hover
+		background-color: #f5f7f8
 		span
-			color: color(secondary)
+			color: #000000
 	span 
-		+tr(color .3s)
+		+tr(all .3s)
 	input
 		position: absolute;
 		opacity: 0
 		&:checked + span
-			color: color(secondary)
-			font-weight: 600
-.select-u-item
-	display: inline-block;
-	width: 100%;
-	position: relative;
-	+rem(margin-bottom, 10px);
-	+nosel
-	&:hover,
-	&.hover
-		.input-text
-			transition: color .3s;
-		.input-checked
-			border-color: color(primary);
-			transition: border-color .3s ease;
-	.input_label
-	display: inline-block;
-	+rem(min-width, 15px)
-	cursor: pointer;
-	width: 100%;
-	.input_main
-		float: left;
-		position: relative;
-		display: inline-block;
-		+rem(padding-bottom,5px)
-		&.has-error
-			.input-checked
-				border-color: color(error)
-	.input-text
-		+rem(font-size, 14px)
-		display: block;
-		overflow: hidden;
-		cursor: pointer;
-		+rem(padding-left, 17px)
-		+rem(padding-top, 3px)
-		white-space: normal
-		
-		transition: color .3s;
-		a 
-			color: color(secondary)
-			text-decoration: underline
-			
-		+r(768)
-			+rem(font-size, 13px)
-	.input-real
-		position: absolute;
-		top: 0;
-		left: 0;
-		opacity: 0;
-		&:checked +.input-checked:before,&.active +.input-checked:before
-			opacity: 1;
-		&:checked +.input-checked,&.active +.input-checked
-		// border: 1px solid color(primary);
-	.input-checked
-		+rem(width, 30px)
-		+rem(height, 30px)
-		display: block;
-		+rem(margin-top,1px);
-		background: #fff;
-		border: 1px solid rgba(0,0,0,.2);
-		position: relative;
-		-o-transition: all .1s ease;
-		transition: all .1s ease;
-		&:before
-			content: '';
-			+rem(width, 20px)
-			+rem(height, 20px)
-			background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACcAAAAcCAMAAADVwFZpAAAAIVBMVEVHcEwzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMNbuebAAAACnRSTlMAHNw38Qq+zZ4myEmdTAAAAFBJREFUeAHtysENgEAIRFHYVVH6L9gCPpPM1cR3fuHI2lZbXV5b+bePtrxPp0X1xcgW+2BkY2RjZGNE05FNRzZG1RBFQ3zmhtiiIc4NsXR7AWGZAwCPdPzeAAAAAElFTkSuQmCC);
-			background-repeat: no-repeat
-			background-position: center
-			background-size: contain
-			display: block;
-			position: absolute;
-			bottom: 4px;
-			+rem(left, 4px)
-			opacity: 0;
-			transition: all .2s ease;
-	.help-block
-		position: absolute
-		white-space: nowrap
-		color: color(error)
-		top: 100%
+			color: #000000
+			font-weight: bold
+
+.js-select-custom.active
+	.selects
+		border-color: #cccccc
+		box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.2)
+	.dropdown-target
+		opacity: 1
+		visibility: visible
+	.select-carret
+		transform: rotate(-180deg)
